ontol/ontol-compiler/test-cases/error/map/missing_attributes_in_match_is_ok.on
def foo ( rel .'a'|'b': text )
def bar ( rel .'c'|'d': text )
map (
    @match foo( 'a': x ),
    bar( 'c': x ) // ERROR missing property `d`// NOTE consider using `match {}`
)
